labs/lab-09-local-ingress-deep-dive/k8s/ingress-host.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcu-host-local
  namespace: ingress-lab-local
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shield.127.0.0.1.sslip.io
        - hydra.127.0.0.1.sslip.io
      secretName: ingress-deep-dive-tls
  rules:
    - host: shield.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-shield
                port:
                  number: 8080
    - host: hydra.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-hydra
                port:
                  number: 8080
