labs/lab-09-local-ingress-deep-dive/k8s/ingress-path.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcu-paths-local
  namespace: ingress-lab-local
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mcu.127.0.0.1.sslip.io
      secretName: ingress-deep-dive-tls
  rules:
    - host: mcu.127.0.0.1.sslip.io
      http:
        paths:
          - path: /shield(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-shield
                port:
                  number: 8080
          - path: /hydra(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-hydra
                port:
                  number: 8080
